<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flickr_search_fragment"
            android:icon="@drawable/ic_nav_flickr_search"
            android:title="@string/title_flickr_search"
            android:checked="true"/>
        <item
            android:id="@+id/nav_geo_search_fragment"
            android:icon="@drawable/ic_nav_geo_search"
            android:title="@string/title_geo_search" />
        <item
            android:id="@+id/nav_last_search_requests_fragment"
            android:icon="@drawable/ic_nav_last_search_requests"
            android:title="@string/title_last_search_requests" />
        <item
            android:id="@+id/nav_favorites_fragment"
            android:icon="@drawable/ic_nav_favorites"
            android:title="@string/title_favorites" />
        <item
            android:id="@+id/nav_requested_photos_fragment"
            android:icon="@drawable/ic_nav_requested_photos"
            android:title="@string/title_requested_photos"
            />
        <item
            android:id="@+id/nav_gallery_fragment"
            android:icon="@drawable/ic_nav_gallery"
            android:title="@string/title_gallery" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_login_fragment"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/action_logout" />
    </group>
</menu>