<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/settings_theme_title">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="Dark theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_background_updates_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_check_box_allow_updates"
            android:title="@string/settings_allow_updates" />
        <EditTextPreference
            android:defaultValue="@string/setting_default_search_request"
            android:key="settings_edit_text_search_request"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_search_request_title"
            app:isPreferenceVisible="false"/>
        <ListPreference
            android:defaultValue="15"
            android:entries="@array/listBackgroundUpdatesIntervalsArray"
            android:entryValues="@array/listBackgroundUpdatesIntervalsValues"
            android:key="settings_background_updates_interval"
            android:title="@string/settings_updates_intervals_title"
            app:isPreferenceVisible="false"/>
    </PreferenceCategory>

</PreferenceScreen>
