<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FlickrSearchActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_flickr_search_layout"
        style="@style/Widget.SSFS.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/edittext_flickr_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_flickr_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_text_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:text="@string/button_text_search"
        style="@style/Widget.SSFS.Button"
        app:layout_constraintEnd_toStartOf="@+id/button_geo_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_flickr_search_layout" />

    <ProgressBar
        android:id="@+id/download_progressbar"
        style="@style/Widget.SSFS.ProgressBar"
        android:layout_width="@dimen/progress_bar_dimen"
        android:layout_height="@dimen/progress_bar_dimen"
        android:layout_marginTop="@dimen/progress_bar_margin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flickr_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_norm"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_search" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/flickr_error"
        android:textAppearance="@style/TextAppearance.SSFS.ErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_very_big"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:textColor="@color/colorError"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_text_search" />


    <ProgressBar
        android:id="@+id/scroll_progressbar"
        style="@style/Widget.SSFS.ProgressBar"
        android:layout_width="@dimen/small_progress_bar_dimen"
        android:layout_height="@dimen/small_progress_bar_dimen"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/flickr_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_geo_search"
        style="@style/Widget.SSFS.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:text="@string/button_geo_search"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_text_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_text_search" />


</androidx.constraintlayout.widget.ConstraintLayout>